# pdf-to-json-benchmark

./: .env.example  .gitignore  DEMO.md  INSTALL.md  INSTALLATION_COMPLETE.md  METHODS.md  METHODS_INSTALLED.md  README.md  RESULTS.md  STATUS.md  TESTING_PLAN.md  TODO.md  check_pdf_availability.py  compare_all_methods.py  compare_methods.py  demo_quick_test.py  download_dataset.py  inspect_dataset.py  pyproject.toml  quickstart.sh  requirements.txt  run_benchmark.py  setup.md  test_dataset.py  test_imports.py
evaluation/: metrics.py
methods/deep_learning/: __init__.py  docling_extractor.py  table_transformer_extractor.py
methods/hybrid/: __init__.py  layout_gpt4_extractor.py
methods/llm/: __init__.py  claude_vision_extractor.py  gemini_vision_extractor.py  gpt4_vision_extractor.py
methods/traditional/: camelot_extractor.py  pdfplumber_extractor.py  tabula_extractor.py
