[project]
name = "pdf-to-json-benchmark"
version = "0.1.0"
description = "Benchmark for PDF to JSON extraction methods on financial documents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Traditional PDF extraction
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.0",
    "tabula-py>=2.9.0",
    "camelot-py[cv]>=0.11.0",
    "pdfminer.six>=20221105",
    
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    
    # Hugging Face
    "datasets>=2.14.0",
    "huggingface_hub>=0.16.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    
    # Evaluation
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["methods", "evaluation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
